--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="location_input_container">
 
-            <h3 class="location_input_title">Enter location</h3>
+            <h3 class="location_input_title">Enter City</h3>
 
             <input id="location_input" type="text">
 
