Added media query and temperature hint

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </div>
 
     </div>
+    <div class="footer_temp_hint">All temperatures calculated in celsius</div>
 
     <script src="app.js" async defer></script>
 </body>
