Updated app.js to include the 0 switch case for the 'sunday' to be included when setting the dates of the cards. Also changed the search button border-radius

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="location_input_container">
 
-            <h3 class="location_input_title">Enter City</h3>
+            <h3 class="location_input_title">Enter City or Country</h3>
 
             <input id="location_input" type="text">
 
