Removed unnecessary class names on html elements

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="forecast_card">
                 <h2 class="forecast_date" id="card_firstDay_title"></h2>
                 <div class="card_content">
-                <h3 class="title forecast_curr_temp_title">High</h3>
+                <h3 class="title">High</h3>
                 <h3 class="content highTemp"></h3>
-                <h3 class="title forecast_curr_feelsLike_title">Low</h3>
+                <h3 class="title">Low</h3>
                 <h3 class="content lowTemp"></h3>
                     </div>
             </div>
@@ -44,9 +44,9 @@
             <div class="forecast_card">
                 <h2 class="forecast_date" id="card_secondDay_title"></h2>
                 <div class="card_content">
-                <h3 class="title forecast_curr_temp_title">High</h3>
+                <h3 class="title">High</h3>
                 <h3 class="content highTemp"></h3>
-                <h3 class="title forecast_curr_feelsLike_title">Low</h3>
+                <h3 class="title">Low</h3>
                 <h3 class="content lowTemp"></h3>
                 </div>
             </div>
@@ -54,9 +54,9 @@
             <div class="forecast_card">
                 <h2 class="forecast_date" id="card_thirdDay_title"></h2>
                 <div class="card_content">
-                <h3 class="title forecast_curr_temp_title">High</h3>
+                <h3 class="title">High</h3>
                 <h3 class="content highTemp"></h3>
-                <h3 class="title forecast_curr_feelsLike_title">Low</h3>
+                <h3 class="title">Low</h3>
                 <h3 class="content lowTemp"></h3>
                 </div>
             </div>
@@ -64,9 +64,9 @@
             <div class="forecast_card">
                 <h2 class="forecast_date" id="card_fourthDay_title"></h2>
                 <div class="card_content">
-                <h3 class="title forecast_curr_temp_title">High</h3>
+                <h3 class="title">High</h3>
                 <h3 class="content highTemp"></h3>
-                <h3 class="title forecast_curr_feelsLike_title">Low</h3>
+                <h3 class="title">Low</h3>
                 <h3 class="content lowTemp"></h3>
                 <div class="card_content"></div>
             </div>
